infrastructure/gitops/anthra-log-ingest/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anthra-log-ingest
  namespace: anthra
  labels:
    app: anthra-log-ingest
    owner: anthra-team
    cost-center: anthra-saas
    data-classification: confidential
  annotations:
    logging.ghostprotocol.io/audit-enabled: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anthra-log-ingest
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: anthra-log-ingest
    spec:
      serviceAccountName: anthra-log-ingest
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: app
          image: anthra/log-ingest:v1.12.0
          imagePullPolicy: Always

          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault

          ports:
            - containerPort: 9090
              name: http

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          livenessProbe:
            httpGet:
              path: /health
              port: 9090
            initialDelaySeconds: 15
            periodSeconds: 20

          readinessProbe:
            httpGet:
              path: /health
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 10

          volumeMounts:
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: tmp
          emptyDir: {}
